gap insurance header fix

--- a/src/containers/GAPInsurance/styles.scss
+++ b/src/containers/GAPInsurance/styles.scss
@@ -2,7 +2,7 @@
 
 #header-gap-insurance {
   position: relative;
-  padding-top: 70px;
+  padding-top: 74px;
   padding-bottom: 70px;
   background-color: $dark-sky-blue;
   background-image: url('../../images/OurProducts/GapInsurance/header-gap-insurance.png'), radial-gradient(circle at -6% -9%, $dark-sky-blue, #43c8cd);
